# vector-space-model

./: .gitignore  app.py  pyproject.toml
apps/: script.py
data/: sampah_bandung.csv
public/: index.html
public/asset/: style.css
public/pages/: search.html
utils/: app2.py  index.py
