[tool.poetry]
name = "apps"
version = "0.1.0"
description = ""
authors = ["bagussr <bagusssyamsu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
pandas = "^1.5.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "apps.script:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
